--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.13.7",
     "pug": "^3.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
